cmake_minimum_required(VERSION 3.20)

project(r8)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_STANDARD 11)
 
find_package(nng REQUIRED)
find_package(nanomsg REQUIRED)
find_package(nlohmann_json REQUIRED)
find_package(fmt REQUIRED)
find_package(spdlog REQUIRED)
find_package(magic_enum CONFIG REQUIRED)
find_package(Taskflow CONFIG REQUIRED)
find_package(efsw CONFIG REQUIRED)
find_package(OpenSSL REQUIRED)
find_package(libuv CONFIG REQUIRED)
find_package(ZLIB REQUIRED)
find_package(date CONFIG REQUIRED)
find_package(Sqlpp11 CONFIG REQUIRED)
find_package(unofficial-sqlite3 CONFIG REQUIRED)
find_package(tinyutf8 CONFIG REQUIRED)
find_package(toml11 CONFIG REQUIRED)
find_package(asio CONFIG REQUIRED)
find_package(nngpp CONFIG REQUIRED)

include_directories(inc config ../libsz/inc/os/${CMAKE_SYSTEM_NAME}/export_flags)

add_definitions(-DUSE_SQLITE -DNOMINMAX -DSPDLOG_COMPILED_LIB)

IF(CMAKE_SYSTEM_NAME MATCHES "Windows")
  if(PROJECT_IS_TOP_LEVEL)
    set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR})
    set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
  endif()
    add_definitions(-DOTL_ODBC)
    add_definitions(-DASIO_HAS_FILE)
    add_compile_options(/bigobj /Zc:__cplusplus)
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Linux")
  SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wunused-function -Wunused-local-typedefs -g -ggdb")
  SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
  add_definitions(-DASIO_HAS_IO_URING)
  include_directories(/usr/local/include /usr/include/postgresql)
  include_directories("$ENV{VCPKG_ROOT}/installed/x64-linux/include")
  link_directories(/usr/local/lib "$ENV{VCPKG_ROOT}/installed/x64-linux/lib")
  link_libraries(pthread uring   sqlite3)
  add_compile_options(-fpermissive)# -mbig-obj)
  add_link_options(-Wl,--no-as-needed)
  add_definitions(-DOTL_ODBC_UNIX -DOS_LINUX)
  add_definitions(-DASIO_HAS_FILE)
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Darwin")
  include_directories(/usr/local/include)
  include_directories("$ENV{VCPKG_ROOT}/installed/x64-osx/include")
  link_directories(/usr/local/lib)
  set(CMAKE_CXX_FLAGS"${CMAKE_CXX_FLAGS}  -Wno-unused-value -pedantic")
  add_definitions(-DOS_DARWIN)
ENDIF(CMAKE_SYSTEM_NAME MATCHES "Windows")

add_subdirectory(gateway)
add_subdirectory(dbmgr)
add_subdirectory(gateforc)